--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,14 @@
 
     <http4k.version>5.41.0.0</http4k.version>
     <kotlinx-serialization.version>1.7.3</kotlinx-serialization.version>
-    <liflig-logging.version>2.20241224.215214</liflig-logging.version>
+    <liflig-logging.version>2.20241230.071210</liflig-logging.version>
     <slf4j.version>2.0.16</slf4j.version>
 
     <!-- Testing-->
     <junit-bom.version>5.11.4</junit-bom.version>
-    <logback-classic.version>1.5.15</logback-classic.version>
-    <!-- TODO: Replace with assert4j? -->
     <kotest-assertions-core-jvm.version>5.9.1</kotest-assertions-core-jvm.version>
+    <logback-classic.version>1.5.15</logback-classic.version>
+    <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
   </properties>
 
   <scm>
@@ -62,6 +62,13 @@
         <groupId>org.http4k</groupId>
         <artifactId>http4k-bom</artifactId>
         <version>${http4k.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-bom</artifactId>
+        <version>${slf4j.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -107,7 +114,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
     </dependency>
 
     <dependency>
@@ -124,6 +130,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback-classic.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.logstash.logback</groupId>
+      <artifactId>logstash-logback-encoder</artifactId>
+      <version>${logstash-logback-encoder.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
