--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,14 @@
   <name>${project.artifactId}</name>
 
   <properties>
-    <major-version>3</major-version>
+    <major-version>4</major-version>
     <revision>${major-version}.local-SNAPSHOT</revision>
 
-    <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
     <java.version>21</java.version>
+    <kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
     <kotlin.compiler.apiVersion>2.1</kotlin.compiler.apiVersion>
 
-    <http4k.version>6.0.1.0</http4k.version>
+    <http4k.version>6.1.0.0</http4k.version>
     <kotlinx-serialization.version>1.8.0</kotlinx-serialization.version>
     <liflig-logging.version>2.20250304.043602</liflig-logging.version>
     <slf4j.version>2.0.17</slf4j.version>
