--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,5 @@
 {
   "extends": [
-    "github>capraconsulting/renovate-config:library",
-    "github>capraconsulting/renovate-config:aggressive"
+    "github>capralifecycle/renovate-config:monthly-grouped"
   ]
 }
