--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <http4k.version>6.15.1.0</http4k.version>
     <kotlinx-serialization.version>1.9.0</kotlinx-serialization.version>
     <liflig-logging.version>2.20250907.111253</liflig-logging.version>
+    <liflig-public-exception.version>1.20250907.113807</liflig-public-exception.version>
     <slf4j.version>2.0.17</slf4j.version>
 
     <!-- Testing-->
@@ -83,6 +84,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>no.liflig</groupId>
+        <artifactId>liflig-logging</artifactId>
+        <version>${liflig-logging.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -113,7 +119,11 @@
     <dependency>
       <groupId>no.liflig</groupId>
       <artifactId>liflig-logging</artifactId>
-      <version>${liflig-logging.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>no.liflig</groupId>
+      <artifactId>liflig-public-exception</artifactId>
+      <version>${liflig-public-exception.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
